grammar.js
    source_file: $ => seq(
      repeat($._prelude_item),
      optional(seq($._opening_statement, $._terminator, repeat($._top_level_item))),
    ),

    _prelude_item: $ => choice(
      seq(choice(seq($._import_marker, $.import_statement), $._prelude_statement), $._terminator),
      alias($._semicolon, $.empty_statement),
    ),

    _top_level_item: $ => choice(
      seq(choice($._prelude_statement, $._opening_statement), $._terminator),
      alias($._semicolon, $.empty_statement),
    ),

    _opening_statement: $ => choice($._opening_statement_without_block, $.block),

    _statement_item: $ => choice(
      seq($._statement, $._terminator),
      alias($._semicolon, $.empty_statement),
    ),

    _terminator: $ => choice(alias($._semicolon, ';'), $._automatic_semicolon),

    _body_statement: $ => choice(
      $.block,
      seq(choice($._prelude_statement, $._opening_statement_without_block, $.import_statement), $._terminator),
      alias($._semicolon, $.empty_statement),
    ),

    import_statement: $ => choice(
      seq('import', field('module', $._module_name), optional(seq('as', field('alias', $.identifier)))),
      seq(
        'from',
        field('module', $._module_name),
        'import',
        sep1(choice($.import_specifier, alias('*', $.wildcard_import)), ','),
      ),
    ),

    _module_name: $ => choice($.string, $.verbatim_string),

    expression_statement: $ => $._statement_regular_expression,

    block: $ => seq('{', repeat($._statement_item), alias($._close_brace, '}')),

    directive: _ => token(seq('#', optional('default:'), choice(...DIRECTIVES))),

    docstring: _ => token(seq('@@"', repeat(choice(/[^"]/, '""')), '"')),

    local_declaration: $ => seq(
      choice('local', 'let'),
      choice(
        seq('function', optional($.function_attributes), field('name', $._name), $._function_tail),
        seq('class', field('name', $._name), $._class_tail),
        sep1($.variable_declarator, ','),
        seq(field('pattern', $._pattern), '=', field('value', $._expression)),
      ),
    ),

    variable_declarator: $ => seq(
      field('name', $._name),
      optional(field('type', alias($._declarator_type_annotation, $.type_annotation))),
      optional(seq('=', field('value', $._regular_expression))),
    ),

    _pattern: $ => choice($.table_pattern, $.array_pattern),

    table_pattern: $ => seq('{', repeat(seq($.pattern_field, optional(','))), alias($._close_brace, '}')),

    array_pattern: $ => seq('[', repeat(seq($.pattern_field, optional(','))), ']'),

    pattern_field: $ => seq(
      field('name', $._name),
      optional(field('type', $.type_annotation)),
      optional(seq('=', field('default', $._regular_expression))),
    ),

    function_declaration: $ => seq(
      optional('async'),
      'function',
      optional($.function_attributes),
      field('name', $._name),
      $._function_tail,
    ),

    class_declaration: $ => seq('class', field('name', $._name), $._class_tail),

    const_declaration: $ => seq(
      optional('global'),
      'const',
      choice(
        seq(field('name', $._name), '=', field('value', $._expression)),
        seq('function', optional($.function_attributes), field('name', $._name), $._function_tail),
      ),
    ),

    enum_declaration: $ => seq(
      optional('global'),
      'enum',
      field('name', $._name),
      '{',
      repeat(seq($.enumerator, optional(','))),
      alias($._close_brace, '}'),
    ),

    negative_literal: $ => seq('-', choice($.integer, $.float, $.char)),

    if_statement: $ => prec.right(seq(
      'if',
      '(',
      field('condition', choice($._expression, $.if_declaration)),
      ')',
      field('consequence', $._body_statement),
      optional(seq(optional($._else_marker), 'else', field('alternative', $._body_statement))),
    )),

    foreach_statement: $ => seq(
      'foreach',
      '(',
      optional(seq(field('index', $._name), ',')),
      field('value', choice($._name, $._pattern)),
      'in',
      field('iterable', $._expression),
      ')',
      field('body', $._body_statement),
    ),

    return_statement: $ => seq('return', optional($._expression)),

    _name: $ => choice($.identifier, $._contextual_name, alias('constructor', $.identifier)),

    _slot_name: $ => choice($.identifier, $._contextual_name),

    function_attributes: _ => {
      const attribute = (/** @type {string} */ name) => seq(name, optional(','));
      return seq('[', optional(choice(
        seq(attribute('pure'), optional(attribute('nodiscard'))),
        seq(attribute('nodiscard'), optional(attribute('pure'))),
      )), ']');
    },

    _function_tail: $ => seq(
      field('parameters', $.parameters),
      optional(field('return_type', $.type_annotation)),
      field('body', $.block),
    ),

    parameters: $ => seq(
      '(',
      optional(choice($._required_parameters, $._default_parameters, $.variadic_parameter)),
      ')',
    ),

    _required_parameters: $ => seq(
      choice(alias($.required_parameter, $.parameter), alias($.pattern_parameter, $.parameter)),
      optional(seq(',', optional(choice($._required_parameters, $._default_parameters, $.variadic_parameter)))),
    ),

    _default_parameters: $ => seq(
      alias($.default_parameter, $.parameter),
      optional(seq(',', optional($._parameters_after_default))),
    ),

    type_annotation: $ => seq(':', choice($._type_union, seq('(', $._type_union, ')'))),

    _declarator_type_annotation: $ => seq(':', choice(
      sep1($._type, alias($._same_line_type_bar, '|')),
      seq('(', $._type_union, ')'),
    )),

    _type_union: $ => sep1($._type, '|'),

    _class_tail: $ => seq(optional(seq('(', field('base', $._expression), ')')), field('body', $.class_body)),

    class_body: $ => seq(
      '{',
      repeat(seq($._class_member, optional(alias($._semicolon, ';')))),
      alias($._close_brace, '}'),
    ),

    _class_member: $ => choice(
      alias($.class_slot, $.slot),
      alias($.class_computed_slot, $.computed_slot),
      alias($.class_method, $.method),
      $.docstring,
    ),

    method: $ => methodForms($),

    update_expression: $ => prec(PREC.UNARY, seq(
      field('operator', choice('++', '--')),
      field('argument', $._unary_operand),
    )),

    arguments: $ => seq(choice('(', '?('), repeat(seq($._expression, optional(','))), ')'),

    this: _ => 'this',
    base: _ => 'base',
    null: _ => 'null',
    true: _ => 'true',
    false: _ => 'false',
    line_macro: _ => '__LINE__',
    file_macro: _ => '__FILE__',

    root_access: $ => seq('::', $._name_adjacent, field('name', $._name)),

    array: $ => seq('[', repeat(seq(choice($._expression, $.spread_element), optional(','))), ']'),

    spread_element: $ => seq('...', $._expression),

    table: $ => seq('{', repeat($._table_group), optional($._shorthand_run), alias($._close_brace, '}')),

    _table_group: $ => choice(
      seq($._table_member, optional(',')),
      seq($._shorthand_run, choice(',', seq($._shorthand_follower, optional(',')))),
    ),

    _shorthand_run: $ => repeat1($.shorthand_slot),

    slot: $ => seq(field('key', $._slot_name), '=', field('value', $._expression)),

    shorthand_slot: $ => field('key', $._slot_name),

    json_slot: $ => seq(field('key', choice($.string, $.verbatim_string)), ':', field('value', $._expression)),

    computed_slot: $ => seq('[', field('key', $._expression), ']', '=', field('value', $._expression)),

    function_expression: $ => seq(
      optional('async'),
      'function',
      optional($.function_attributes),
      optional(field('name', $._name)),
      $._function_tail,
    ),

    lambda_expression: $ => choice(seq('async', $._lambda), $._lambda),

    _lambda: $ => prec.right(PREC.LAMBDA, seq(
      '@',
      optional($.function_attributes),
      optional(field('name', $._name)),
      field('parameters', $.parameters),
      optional(field('return_type', $.type_annotation)),
      field('body', $._regular_expression),
    )),

    class_expression: $ => seq('class', $._class_tail),

    code_block_expression: $ => seq('$${', repeat($._statement_item), alias($._close_brace, '}')),

    string: $ => seq(
      '"',
      repeat(choice(alias(token.immediate(prec(1, /[^"\\\n]+/)), $.string_content), $.escape_sequence)),
      token.immediate('"'),
    ),

    escape_sequence: _ => token.immediate(ESCAPE),

    verbatim_string: _ => token(seq('@"', repeat(choice(/[^"]/, '""')), '"')),

    identifier: _ => /[A-Za-z_][A-Za-z0-9_]*/,

    comment: _ => token(choice(
      seq('//', /[^\n]*/),
      seq('/*', /[^*]*\*+([^/*][^*]*\*+)*/, '/'),
    )),
