test/corpus/declarations.txt
================================================================================
Local and let declarations
================================================================================

local a, b = 1, c: int|null = 2
let d: (int
  | string) = 3
let {e, f: string = "x"} = g
local [h i] = j

--------------------------------------------------------------------------------

(source_file
  (local_declaration
    (variable_declaration
      name: (identifier))
    (variable_declaration
      name: (identifier)
      value: (integer))
    (variable_declaration
      name: (identifier)
      type: (type_annotation
        (type)
        (type))
      value: (integer)))
  (local_declaration
    (variable_declaration
      name: (identifier)
      type: (type_annotation
        (type)
        (type))
      value: (integer)))
  (local_declaration
    pattern: (table_pattern
      (pattern_field
        name: (identifier))
      (pattern_field
        name: (identifier)
        type: (type_annotation
          (type))
        default: (string
          (string_content))))
    value: (identifier))
  (local_declaration
    pattern: (array_pattern
      (pattern_field
        name: (identifier))
      (pattern_field
        name: (identifier)))
    value: (identifier)))

================================================================================
Function declarations
================================================================================

function f(a, b: int = 1, {c}, d = 2) : table|null {
  return null
}
async function g(...: string) {}
function [pure, nodiscard] h() {}
local function i() {}
let function [nodiscard] j(x) { return x }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameters
      (parameter
        name: (identifier))
      (parameter
        name: (identifier)
        type: (type_annotation
          (type))
        default: (integer))
      (parameter
        pattern: (table_pattern
          (pattern_field
            name: (identifier))))
      (parameter
        name: (identifier)
        default: (integer)))
    return_type: (type_annotation
      (type)
      (type))
    body: (block
      (return_statement
        (null))))
  (function_declaration
    name: (identifier)
    parameters: (parameters
      (vararg_parameter
        type: (type_annotation
          (type))))
    body: (block))
  (function_declaration
    (function_attributes)
    name: (identifier)
    parameters: (parameters)
    body: (block))
  (local_declaration
    name: (identifier)
    parameters: (parameters)
    body: (block))
  (local_declaration
    (function_attributes)
    name: (identifier)
    parameters: (parameters
      (parameter
        name: (identifier)))
    body: (block
      (return_statement
        (identifier)))))

================================================================================
Class declarations
================================================================================

class Base {}
class Derived (Base) {
  @@"Class documentation"
  x = 1
  static count = 0;
  [key] = 2
  static [other] = 3
  constructor(value) {
    base.constructor(value)
  }
  function get() { return this.x }
  async function fetch() {}
  static async function make() {}
}
local class Local {}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    name: (identifier)
    body: (class_body))
  (class_declaration
    name: (identifier)
    base: (identifier)
    body: (class_body
      (docstring)
      (slot
        key: (identifier)
        value: (integer))
      (slot
        key: (identifier)
        value: (integer))
      (computed_slot
        key: (identifier)
        value: (integer))
      (computed_slot
        key: (identifier)
        value: (integer))
      (method
        name: (identifier)
        parameters: (parameters
          (parameter
            name: (identifier)))
        body: (block
          (expression_statement
            (call_expression
              callee: (field_access_expression
                receiver: (base)
                field: (field_identifier))
              arguments: (arguments
                (identifier))))))
      (method
        name: (identifier)
        parameters: (parameters)
        body: (block
          (return_statement
            (field_access_expression
              receiver: (this)
              field: (field_identifier)))))
      (method
        name: (identifier)
        parameters: (parameters)
        body: (block))
      (method
        name: (identifier)
        parameters: (parameters)
        body: (block))))
  (local_declaration
    name: (identifier)
    body: (class_body)))

================================================================================
Enum declarations
================================================================================

enum Color {
  RED
  GREEN = 2,
  BLUE = -3
  NAME = "blue"
  RATIO = 1.5
  FLAG = true
  NONE = null
}
global enum Mode { A, B }

--------------------------------------------------------------------------------

(source_file
  (enum_declaration
    name: (identifier)
    (enum_member
      name: (identifier))
    (enum_member
      name: (identifier)
      value: (integer))
    (enum_member
      name: (identifier)
      value: (negative_literal
        (integer)))
    (enum_member
      name: (identifier)
      value: (string
        (string_content)))
    (enum_member
      name: (identifier)
      value: (float))
    (enum_member
      name: (identifier)
      value: (true))
    (enum_member
      name: (identifier)
      value: (null)))
  (enum_declaration
    name: (identifier)
    (enum_member
      name: (identifier))
    (enum_member
      name: (identifier))))

================================================================================
Const declarations
================================================================================

const LIMIT = 10
const function [pure] twice(x) { return x * 2 }
global const VERSION = "1.0"

--------------------------------------------------------------------------------

(source_file
  (const_declaration
    name: (identifier)
    value: (integer))
  (const_declaration
    (function_attributes)
    name: (identifier)
    parameters: (parameters
      (parameter
        name: (identifier)))
    body: (block
      (return_statement
        (binary_expression
          left: (identifier)
          right: (integer)))))
  (const_declaration
    name: (identifier)
    value: (string
      (string_content))))

================================================================================
Metamethod name on an async function and near an async method
================================================================================

async function _add() {}
class C { async function _added() {} function _add() {} }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    body: (block))
  (class_declaration
    name: (identifier)
    body: (class_body
      (method
        name: (identifier)
        parameters: (parameters)
        body: (block))
      (method
        name: (identifier)
        parameters: (parameters)
        body: (block)))))

================================================================================
Empty pattern in a parameter and in a foreach
================================================================================

function f({}, []) {}
foreach ({} in x) {}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameters
      (parameter
        pattern: (table_pattern))
      (parameter
        pattern: (array_pattern)))
    body: (block))
  (foreach_statement
    value: (table_pattern)
    container: (identifier)
    body: (block)))
