test/corpus/literals.txt
================================================================================
Numbers
================================================================================

x = [0, 1_000, 0x_FF_00, 0X1f, 1., 1.5, 1.e5, 1e+5, 2E-3, 1_e5, 0.5]

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (assignment_expression
      left: (identifier)
      right: (array
        (integer)
        (integer)
        (integer)
        (integer)
        (float)
        (float)
        (float)
        (float)
        (float)
        (float)
        (float)))))

================================================================================
Numbers at the limits of the compiler
================================================================================

x = [9223372036854775807, 0xFFFF_FFFF_FFFF_FFFF, 3.4028233e38, 1e-45, 0.0e-999, 0e999]

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (assignment_expression
      left: (identifier)
      right: (array
        (integer)
        (integer)
        (float)
        (float)
        (float)
        (float)))))

================================================================================
Strings and characters
================================================================================

a = "text \"quoted\" \x41\u0041\U0001F600\n\t\\"
b = @"verbatim ""quote"" \no escape
second line"
c = 'c'
d = '\n'

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (assignment_expression
      left: (identifier)
      right: (string
        (string_content)
        (escape_sequence)
        (string_content)
        (escape_sequence)
        (string_content)
        (escape_sequence)
        (escape_sequence)
        (escape_sequence)
        (escape_sequence)
        (escape_sequence)
        (escape_sequence))))
  (expression_statement
    (assignment_expression
      left: (identifier)
      right: (verbatim_string)))
  (expression_statement
    (assignment_expression
      left: (identifier)
      right: (character)))
  (expression_statement
    (assignment_expression
      left: (identifier)
      right: (character))))

================================================================================
Template strings
================================================================================

a = $"value {x + 1}, escaped \{ \} and {f($"{y}")}"
b = $"a}b"

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (assignment_expression
      left: (identifier)
      right: (interpolated_string
        (string_content)
        (hole
          (binary_expression
            left: (identifier)
            right: (integer)))
        (string_content)
        (escape_sequence)
        (string_content)
        (escape_sequence)
        (string_content)
        (hole
          (call_expression
            callee: (identifier)
            arguments: (arguments
              (interpolated_string
                (hole
                  (identifier)))))))))
  (expression_statement
    (assignment_expression
      left: (identifier)
      right: (interpolated_string
        (string_content)))))

================================================================================
Keyword literals
================================================================================

x = [null, true, false, this, __LINE__, __FILE__]

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (assignment_expression
      left: (identifier)
      right: (array
        (null)
        (true)
        (false)
        (this)
        (line_macro)
        (file_macro)))))

================================================================================
Comments
================================================================================

// line comment
x = 1 /* block */ + 2
/* multi
   line */

--------------------------------------------------------------------------------

(source_file
  (comment)
  (expression_statement
    (assignment_expression
      left: (identifier)
      right: (binary_expression
        left: (integer)
        (comment)
        right: (integer))))
  (comment))
